package by.khomenko.training.task03.entity;

import java.util.List;

public class Lexeme extends TextComposite {

    public Lexeme(final List<TextComponent> list) {
        super(list);
    }

}
