package by.khomenko.training.task03.entity;

import java.util.List;

public class Word extends TextComposite {

    public Word(final List<TextComponent> listVal) {
        super(listVal);
    }

}
